# fastapi-boot

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  main.py  pyproject.toml  test_di.py  test_endpoint.py  test_exception_handler.py  test_middleware.py  test_subapp.py  test_tortoise_utils.py
tests/src/test_code/: test_di.py  test_endpoint.py  test_middleware.py  test_tortoise_utils.py
tests/src/test_project/: app.py  event.py
tests/src/test_project/app1/: config.py  main.py
tests/src/test_project/app1/modules/book/: beans.py  controller.py  hooks.py  models.py  service.py
tests/src/test_project/app1/modules/endpoint/: controller.py
tests/src/test_project/app1/modules/exception_handler/: controller.py  exception.py
tests/src/test_project/app1/modules/middleware/: controller.py  middleware.py
tests/src/test_project/app1/modules/subapp/: controller.py
tests/src/test_project/app1/modules/tortoise_utils/: controller.py  dao.py  expection.py  model.py  service.py
tests/src/test_project/app2/: main.py
tests/src/test_project/app2/demo/: controller.py
tests/test_project/: main.py  pyproject.toml
tests/test_project/app1/: pyproject.toml
tests/test_project/app1/resource/: db.sqlite-shm
tests/test_project/app1/src/: config.py  event.py
tests/test_project/app2/: pyproject.toml
tests/test_project/resource/: db.sqlite  db.sqlite-wal
tests/test_project/src/: event.py  shared.py
tests/test_project/src/modules/book/: beans.py  controller.py  hooks.py  models.py  service.py
tests/test_project/src/modules/endpoint/: controller.py
tests/test_project/src/modules/middleware/: controller.py  middleware.py
tests/test_project/src/modules/tortoise_utils/: controller.py  dao.py  expection.py  service.py
(+43 files in other folders)
